--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.15.1",
     "react-redux": "^9.1.0",
+    "react-sound": "^1.2.0",
     "redux": "^5.0.1",
     "tailwind-scrollbar": "^3.1.0",
     "zustand": "^4.5.2"
@@ -29,6 +30,7 @@
     "@types/mocha": "^10.0.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-sound": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
